appId: com.agubear.weather.app
---
- launchApp:
    clearState: true
- tapOn:
    text: '允許使用 App 時'
    optional: true
- setLocation:
    latitude: 25.0330
    longitude: 121.5654
- extendedWaitUntil:
    visible:
      text: '天氣'
    timeout: 30000
- waitForAnimationToEnd
- tapOn:
    point: 50%,85%
- waitForAnimationToEnd
- assertVisible:
    text: '設定'
- swipe:
    direction: UP
    amount: 3
- waitForAnimationToEnd
- tapOn:
    text: '台北'
- waitForAnimationToEnd
- inputText: '高雄'
- waitForAnimationToEnd
- tapOn:
    text: '高雄'
- waitForAnimationToEnd
- assertVisible:
    text: '高雄'
